# BC-RAO

./: .gitignore  bc-rao-system-spec_1.md
bc-rao-api/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
bc-rao-api/app/: __init__.py  config.py  dependencies.py  main.py
bc-rao-api/app/analysis/: __init__.py  nlp_pipeline.py  pattern_extractor.py  scorers.py  style_extractor.py  style_guide_generator.py
bc-rao-api/app/generation/: __init__.py  blacklist_validator.py  generation_service.py  humanizer.py  isc_gating.py  prompt_builder.py
bc-rao-api/app/inference/: __init__.py  client.py  cost_tracker.py  router.py
bc-rao-api/app/integrations/: apify_client.py  reddit_client.py  supabase_client.py
bc-rao-api/app/models/: analysis.py  auth.py  campaign.py  common.py  draft.py  monitoring.py  raw_posts.py
bc-rao-api/app/services/: analysis_service.py  auth_service.py  campaign_service.py  collection_service.py  email_service.py  monitoring_service.py  regex_filter.py  usage_service.py
bc-rao-api/app/utils/: errors.py  security.py
bc-rao-api/app/workers/: __init__.py  analysis_worker.py  celery_app.py  collection_worker.py  generation_worker.py  monitoring_worker.py  task_runner.py
bc-rao-api/tests/: QUICKSTART.md  README.md  TEST_SUMMARY.md  conftest.py  test_blacklist_validator.py  test_collection_service.py  test_cost_tracker.py  test_errors.py  test_humanizer.py  test_isc_gating.py  test_monitoring_service.py  test_regex_filter.py  test_style_extractor.py  test_style_guide_generator.py
(+204 files in other folders)
