[project]
name = "bc-rao-api"
version = "1.0.0"
description = "BC-RAO Backend API - Social intelligence platform for Reddit marketing"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",
    "supabase>=2.3.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "apify-client>=1.6.0",
    "spacy>=3.8.0",
    "textstat>=0.7.12",
    "vaderSentiment>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
